// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render as dismissable 1`] = `
<div
  class="wp-components-animated css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="Animated"
  style="opacity: 0; transform: scale(0.9) translateZ(0);"
>
  <div
    class="wp-components-alert css-11u2t7j"
    data-g2-c16t="true"
    data-g2-component="Alert"
  >
    <div
      class="wp-components-view wp-components-flex css-upp0h5"
      data-g2-c16t="true"
      data-g2-component="Flex"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-16celyg"
        data-g2-c16t="true"
        data-g2-component="FlexBlock"
      >
        <div
          class="wp-components-view css-oabb2t"
          data-g2-c16t="true"
          data-g2-component="AlertContent"
        >
          I like warm hugs
        </div>
      </div>
      <div
        class="wp-components-flex-item css-1suoifq"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      >
        <div
          class="css-19dflv5"
        >
          <button
            aria-busy="false"
            class="wp-components-button wp-components-close-button css-76hjhg"
            data-destructive="false"
            data-g2-c16t="true"
            data-g2-component="CloseButton"
            data-icon="true"
            title="Dismiss"
            type="button"
          >
            <span
              class="wp-components-view wp-components-flex css-2r7rsp"
              data-g2-c16t="true"
              data-g2-component="Flex"
            >
              <span
                class="wp-components-flex-item css-bzokzn"
                data-g2-c16t="true"
                data-g2-component="ButtonIcon"
              >
                <div
                  class="wp-components-icon css-1k4as4"
                  data-g2-c16t="true"
                  data-g2-component="Icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    size="16"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <line
                      x1="18"
                      x2="6"
                      y1="6"
                      y2="18"
                    />
                    <line
                      x1="6"
                      x2="18"
                      y1="6"
                      y2="18"
                    />
                  </svg>
                </div>
              </span>
            </span>
            <span
              class="wp-components-elevation css-h443as"
              data-g2-c16t="true"
              data-g2-component="ButtonElevation"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-animated css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="Animated"
  style="opacity: 0; transform: scale(0.9) translateZ(0);"
>
  <div
    class="wp-components-alert css-17vh6wg"
    data-g2-c16t="true"
    data-g2-component="Alert"
  >
    <div
      class="wp-components-view wp-components-flex css-upp0h5"
      data-g2-c16t="true"
      data-g2-component="Flex"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-16celyg"
        data-g2-c16t="true"
        data-g2-component="FlexBlock"
      >
        <div
          class="wp-components-view css-j1yu9m"
          data-g2-c16t="true"
          data-g2-component="AlertContent"
        >
          I like warm hugs
        </div>
      </div>
      <div
        class="wp-components-flex-item css-1suoifq"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      />
    </div>
  </div>
</div>
`;

exports[`props should render with status 1`] = `
<div
  class="wp-components-view css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="Alerts"
>
  <div
    class="wp-components-animated css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="Animated"
    style="opacity: 1; transform: none;"
  >
    <div
      class="wp-components-alert css-3n26nx"
      data-g2-c16t="true"
      data-g2-component="Alert"
    >
      <div
        class="wp-components-view wp-components-flex css-upp0h5"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <div
          class="wp-components-flex-item wp-components-flex-block css-16celyg"
          data-g2-c16t="true"
          data-g2-component="FlexBlock"
        >
          <div
            class="wp-components-view css-oabb2t"
            data-g2-c16t="true"
            data-g2-component="AlertContent"
          >
            I like warm hugs
          </div>
        </div>
        <div
          class="wp-components-flex-item css-1suoifq"
          data-g2-c16t="true"
          data-g2-component="FlexItem"
        >
          <div
            class="css-1f2v6o8"
          >
            <button
              aria-busy="false"
              class="wp-components-button wp-components-close-button css-76hjhg"
              data-destructive="false"
              data-g2-c16t="true"
              data-g2-component="CloseButton"
              data-icon="true"
              title="Dismiss"
              type="button"
            >
              <span
                class="wp-components-view wp-components-flex css-2r7rsp"
                data-g2-c16t="true"
                data-g2-component="Flex"
              >
                <span
                  class="wp-components-flex-item css-bzokzn"
                  data-g2-c16t="true"
                  data-g2-component="ButtonIcon"
                >
                  <div
                    class="wp-components-icon css-1k4as4"
                    data-g2-c16t="true"
                    data-g2-component="Icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      size="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="18"
                        x2="6"
                        y1="6"
                        y2="18"
                      />
                      <line
                        x1="6"
                        x2="18"
                        y1="6"
                        y2="18"
                      />
                    </svg>
                  </div>
                </span>
              </span>
              <span
                class="wp-components-elevation css-h443as"
                data-g2-c16t="true"
                data-g2-component="ButtonElevation"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wp-components-animated css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="Animated"
    style="opacity: 1; transform: none;"
  >
    <div
      class="wp-components-alert css-11u2t7j"
      data-g2-c16t="true"
      data-g2-component="Alert"
    >
      <div
        class="wp-components-view wp-components-flex css-upp0h5"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <div
          class="wp-components-flex-item wp-components-flex-block css-16celyg"
          data-g2-c16t="true"
          data-g2-component="FlexBlock"
        >
          <div
            class="wp-components-view css-oabb2t"
            data-g2-c16t="true"
            data-g2-component="AlertContent"
          >
            I like warm hugs
          </div>
        </div>
        <div
          class="wp-components-flex-item css-1suoifq"
          data-g2-c16t="true"
          data-g2-component="FlexItem"
        >
          <div
            class="css-19dflv5"
          >
            <button
              aria-busy="false"
              class="wp-components-button wp-components-close-button css-76hjhg"
              data-destructive="false"
              data-g2-c16t="true"
              data-g2-component="CloseButton"
              data-icon="true"
              title="Dismiss"
              type="button"
            >
              <span
                class="wp-components-view wp-components-flex css-2r7rsp"
                data-g2-c16t="true"
                data-g2-component="Flex"
              >
                <span
                  class="wp-components-flex-item css-bzokzn"
                  data-g2-c16t="true"
                  data-g2-component="ButtonIcon"
                >
                  <div
                    class="wp-components-icon css-1k4as4"
                    data-g2-c16t="true"
                    data-g2-component="Icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      size="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="18"
                        x2="6"
                        y1="6"
                        y2="18"
                      />
                      <line
                        x1="6"
                        x2="18"
                        y1="6"
                        y2="18"
                      />
                    </svg>
                  </div>
                </span>
              </span>
              <span
                class="wp-components-elevation css-h443as"
                data-g2-c16t="true"
                data-g2-component="ButtonElevation"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wp-components-animated css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="Animated"
    style="opacity: 1; transform: none;"
  >
    <div
      class="wp-components-alert css-1hfieli"
      data-g2-c16t="true"
      data-g2-component="Alert"
    >
      <div
        class="wp-components-view wp-components-flex css-upp0h5"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <div
          class="wp-components-flex-item wp-components-flex-block css-16celyg"
          data-g2-c16t="true"
          data-g2-component="FlexBlock"
        >
          <div
            class="wp-components-view css-oabb2t"
            data-g2-c16t="true"
            data-g2-component="AlertContent"
          >
            I like warm hugs
          </div>
        </div>
        <div
          class="wp-components-flex-item css-1suoifq"
          data-g2-c16t="true"
          data-g2-component="FlexItem"
        >
          <div
            class="css-vzr214"
          >
            <button
              aria-busy="false"
              class="wp-components-button wp-components-close-button css-76hjhg"
              data-destructive="false"
              data-g2-c16t="true"
              data-g2-component="CloseButton"
              data-icon="true"
              title="Dismiss"
              type="button"
            >
              <span
                class="wp-components-view wp-components-flex css-2r7rsp"
                data-g2-c16t="true"
                data-g2-component="Flex"
              >
                <span
                  class="wp-components-flex-item css-bzokzn"
                  data-g2-c16t="true"
                  data-g2-component="ButtonIcon"
                >
                  <div
                    class="wp-components-icon css-1k4as4"
                    data-g2-c16t="true"
                    data-g2-component="Icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      size="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="18"
                        x2="6"
                        y1="6"
                        y2="18"
                      />
                      <line
                        x1="6"
                        x2="18"
                        y1="6"
                        y2="18"
                      />
                    </svg>
                  </div>
                </span>
              </span>
              <span
                class="wp-components-elevation css-h443as"
                data-g2-c16t="true"
                data-g2-component="ButtonElevation"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wp-components-animated css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="Animated"
    style="opacity: 1; transform: none;"
  >
    <div
      class="wp-components-alert css-1vybbdx"
      data-g2-c16t="true"
      data-g2-component="Alert"
    >
      <div
        class="wp-components-view wp-components-flex css-upp0h5"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <div
          class="wp-components-flex-item wp-components-flex-block css-16celyg"
          data-g2-c16t="true"
          data-g2-component="FlexBlock"
        >
          <div
            class="wp-components-view css-oabb2t"
            data-g2-c16t="true"
            data-g2-component="AlertContent"
          >
            I like warm hugs
          </div>
        </div>
        <div
          class="wp-components-flex-item css-1suoifq"
          data-g2-c16t="true"
          data-g2-component="FlexItem"
        >
          <div
            class="css-w9yvet"
          >
            <button
              aria-busy="false"
              class="wp-components-button wp-components-close-button css-76hjhg"
              data-destructive="false"
              data-g2-c16t="true"
              data-g2-component="CloseButton"
              data-icon="true"
              title="Dismiss"
              type="button"
            >
              <span
                class="wp-components-view wp-components-flex css-2r7rsp"
                data-g2-c16t="true"
                data-g2-component="Flex"
              >
                <span
                  class="wp-components-flex-item css-bzokzn"
                  data-g2-c16t="true"
                  data-g2-component="ButtonIcon"
                >
                  <div
                    class="wp-components-icon css-1k4as4"
                    data-g2-c16t="true"
                    data-g2-component="Icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      size="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="18"
                        x2="6"
                        y1="6"
                        y2="18"
                      />
                      <line
                        x1="6"
                        x2="18"
                        y1="6"
                        y2="18"
                      />
                    </svg>
                  </div>
                </span>
              </span>
              <span
                class="wp-components-elevation css-h443as"
                data-g2-c16t="true"
                data-g2-component="ButtonElevation"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="wp-components-animated css-j1yu9m"
    data-g2-c16t="true"
    data-g2-component="Animated"
    style="opacity: 1; transform: none;"
  >
    <div
      class="wp-components-alert css-17vh6wg"
      data-g2-c16t="true"
      data-g2-component="Alert"
    >
      <div
        class="wp-components-view wp-components-flex css-upp0h5"
        data-g2-c16t="true"
        data-g2-component="Flex"
      >
        <div
          class="wp-components-flex-item wp-components-flex-block css-16celyg"
          data-g2-c16t="true"
          data-g2-component="FlexBlock"
        >
          <div
            class="wp-components-view css-oabb2t"
            data-g2-c16t="true"
            data-g2-component="AlertContent"
          >
            I like warm hugs
          </div>
        </div>
        <div
          class="wp-components-flex-item css-1suoifq"
          data-g2-c16t="true"
          data-g2-component="FlexItem"
        >
          <div
            class="css-2viu79"
          >
            <button
              aria-busy="false"
              class="wp-components-button wp-components-close-button css-76hjhg"
              data-destructive="false"
              data-g2-c16t="true"
              data-g2-component="CloseButton"
              data-icon="true"
              title="Dismiss"
              type="button"
            >
              <span
                class="wp-components-view wp-components-flex css-2r7rsp"
                data-g2-c16t="true"
                data-g2-component="Flex"
              >
                <span
                  class="wp-components-flex-item css-bzokzn"
                  data-g2-c16t="true"
                  data-g2-component="ButtonIcon"
                >
                  <div
                    class="wp-components-icon css-1k4as4"
                    data-g2-c16t="true"
                    data-g2-component="Icon"
                  >
                    <svg
                      fill="none"
                      height="16"
                      size="16"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <line
                        x1="18"
                        x2="6"
                        y1="6"
                        y2="18"
                      />
                      <line
                        x1="6"
                        x2="18"
                        y1="6"
                        y2="18"
                      />
                    </svg>
                  </div>
                </span>
              </span>
              <span
                class="wp-components-elevation css-h443as"
                data-g2-c16t="true"
                data-g2-component="ButtonElevation"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props should render with title 1`] = `
<div
  class="wp-components-animated css-j1yu9m"
  data-g2-c16t="true"
  data-g2-component="Animated"
  style="opacity: 0; transform: scale(0.9) translateZ(0);"
>
  <div
    class="wp-components-alert css-17vh6wg"
    data-g2-c16t="true"
    data-g2-component="Alert"
  >
    <div
      class="wp-components-view wp-components-flex css-upp0h5"
      data-g2-c16t="true"
      data-g2-component="Flex"
    >
      <div
        class="wp-components-flex-item wp-components-flex-block css-16celyg"
        data-g2-c16t="true"
        data-g2-component="FlexBlock"
      >
        <div
          class="wp-components-view wp-components-spacer css-1pjan5r"
          data-g2-c16t="true"
          data-g2-component="Spacer"
        >
          <div
            class="wp-components-text wp-components-heading css-bnjcxl"
            data-g2-c16t="true"
            data-g2-component="Heading"
          >
            Hi
          </div>
        </div>
        <div
          class="wp-components-view css-j1yu9m"
          data-g2-c16t="true"
          data-g2-component="AlertContent"
        >
          I like warm hugs
        </div>
      </div>
      <div
        class="wp-components-flex-item css-1suoifq"
        data-g2-c16t="true"
        data-g2-component="FlexItem"
      />
    </div>
  </div>
</div>
`;
